gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test20881.d
version https://git-lfs.github.com/spec/v1
oid sha256:e42368dbfcbc5d16aec5ae0034b55ae5a610a98f8bba3bb44cea6d12d34dad54
size 822
